# minitalk

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: minitalk.h
src/: client.c  client_bonus.c  server.c  server_bonus.c
